# kj-rs

./: Cargo.toml  build.rs
.github/workflows/: simple.yaml
include/: awaiter.h  executor-guarded.h  future.h  linked-group.h  promise.h  waker.h
src/: awaiter.c++  awaiter.rs  executor-guarded.c++  lib.rs  promise.c++  promise.rs  waker.c++
tests/: BUILD.bazel  MODULE.bazel  cxxbridge-cmd.cargo-bazel-lock.json
tests/crates_vendor/: BUILD.bazel  BUILD.cc-1.2.16.bazel  BUILD.codespan-reporting-0.11.1.bazel  BUILD.cxx-1.0.143.bazel  BUILD.cxx-build-1.0.112.bazel  BUILD.cxxbridge-flags-1.0.143.bazel  BUILD.cxxbridge-macro-1.0.143.bazel  BUILD.foldhash-0.1.4.bazel  BUILD.kj-rs-0.1.1.bazel  BUILD.link-cplusplus-1.0.9.bazel  BUILD.once_cell-1.20.3.bazel  BUILD.proc-macro2-1.0.94.bazel  BUILD.quote-1.0.39.bazel  BUILD.rustversion-1.0.20.bazel  BUILD.scratch-1.0.8.bazel  BUILD.shlex-1.3.0.bazel  BUILD.syn-2.0.100.bazel  BUILD.termcolor-1.4.1.bazel  BUILD.unicode-ident-1.0.11.bazel  BUILD.unicode-width-0.1.14.bazel  BUILD.winapi-util-0.1.9.bazel  BUILD.windows-sys-0.59.0.bazel  BUILD.windows-targets-0.52.6.bazel  BUILD.windows_aarch64_gnullvm-0.52.6.bazel  BUILD.windows_aarch64_msvc-0.52.6.bazel  BUILD.windows_i686_gnu-0.52.6.bazel  BUILD.windows_i686_gnullvm-0.52.6.bazel  BUILD.windows_i686_msvc-0.52.6.bazel  BUILD.windows_x86_64_gnu-0.52.6.bazel  BUILD.windows_x86_64_gnullvm-0.52.6.bazel  BUILD.windows_x86_64_msvc-0.52.6.bazel  crates.bzl  defs.bzl
tests/src/: awaitables-cc-test.c++  future-boilerplate.c++  future-boilerplate.h  future.rs  future_boilerplate.rs  lib.rs  promise-boilerplate.c++  promise-boilerplate.h  promise.rs  promise_boilerplate.rs  test-promises.c++  test-promises.h
